--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: usa.mayiyun.shop, port: 80, type: vmess, uuid: 94ff1ce8-30d2-4b8f-8973-e7046364f260, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: usa.mayiyun.shop}}
-  - {name: 🇳🇱 荷兰-1.22MB/s(Youtube:不良林), server: 213.183.59.214, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇷🇺 俄罗斯联邦-450.2KB/s(Youtube:不良林), server: 213.183.53.208, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇳🇱 荷兰-287.5KB/s(Youtube:不良林), server: 213.183.59.214, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇳🇱 荷兰-305.5KB/s(Youtube:不良林), server: 213.183.59.206, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇳🇱 荷兰-393.2KB/s(Youtube:不良林), server: 213.183.59.214, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 167.88.61.50, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇳🇱 荷兰-260.9KB/s(Youtube:不良林), server: 213.183.51.172, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
   - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 97.64.31.80, port: 247, type: ss, cipher: aes-256-cfb, password: bwhskrskr03}
-  - {name: 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林), server: 185.167.116.252, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
-  - {name: 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林), server: 185.167.116.252, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 🇳🇱 荷兰-1012.7KB/s(Youtube:不良林), server: 213.183.51.172, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇳🇱 荷兰-2.06MB/s(Youtube:不良林), server: 213.183.51.172, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
-  - {name: 🇳🇱 荷兰-1011.9KB/s(Youtube:不良林), server: 213.183.59.218, port: 9070, type: ss, cipher: aes-256-cfb, password: bf7v334KKDV3YDhH}
+  - {name: 🇷🇺 俄罗斯联邦-222.3KB/s(Youtube:不良林), server: 213.183.53.200, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇷🇺 俄罗斯联邦-559.4KB/s(Youtube:不良林), server: 213.183.53.177, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇳🇱 荷兰-259.2KB/s(Youtube:不良林), server: 213.183.51.172, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇳🇱 荷兰-363.9KB/s(Youtube:不良林), server: 213.183.51.172, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇳🇱 荷兰-1.11MB/s(Youtube:不良林), server: 213.183.59.218, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-450.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-393.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-260.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1012.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1011.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-222.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-559.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-259.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-363.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-450.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-393.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-260.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1012.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1011.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-222.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-559.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-259.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-363.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-450.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-393.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-260.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1012.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1011.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-222.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-559.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-259.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-363.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-450.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-393.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-260.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1012.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1011.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-222.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-559.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-259.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-363.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-450.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-393.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-260.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1012.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1011.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-222.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-559.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-259.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-363.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-450.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-393.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-260.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1012.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1011.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-222.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-559.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-259.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-363.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-450.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-287.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-393.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-260.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-406.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1012.7KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.06MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1011.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-222.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-559.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-259.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-363.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
