--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林), server: 213.183.53.177, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇷🇺 俄罗斯联邦-275.6KB/s(Youtube:不良林), server: 213.183.53.200, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇳🇱 荷兰-594.5KB/s(Youtube:不良林), server: 213.183.59.218, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇳🇱 荷兰-249.0KB/s(Youtube:不良林), server: 213.183.51.172, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
-  - {name: 🇷🇺 俄罗斯联邦-443.2KB/s(Youtube:不良林), server: 213.183.53.202, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇺🇸 美国-216.3KB/s(Youtube:不良林), server: 167.88.61.50, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-445.1KB/s(Youtube:不良林), server: 167.88.61.2, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-458.1KB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-339.6KB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-289.9KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 波兰-257.7KB/s(Youtube:不良林), server: 217.30.10.67, port: 9026, type: ss, cipher: aes-256-cfb, password: QWDDvVE9npNurQfA}
+  - {name: 🇳🇱 荷兰-238.9KB/s(Youtube:不良林), server: 213.183.51.172, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇺🇸 美国-226.4KB/s(Youtube:不良林), server: 167.88.61.50, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-359.7KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-284.5KB/s(Youtube:不良林), server: 213.183.51.172, port: 9037, type: ss, cipher: aes-256-cfb, password: TN2YqghxeFDKZfLU}
+  - {name: 波兰-210.7KB/s(Youtube:不良林), server: 217.30.10.67, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇷🇺 俄罗斯联邦-234.3KB/s(Youtube:不良林), server: 213.183.53.177, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇳🇱 荷兰-547.6KB/s(Youtube:不良林), server: 213.183.59.218, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇨🇳 中国-2.30MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-352.1KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-594.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-249.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-443.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-216.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-445.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-458.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-289.9KB/s(Youtube:不良林)
+      - 波兰-257.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-238.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-284.5KB/s(Youtube:不良林)
+      - 波兰-210.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-594.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-249.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-443.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-216.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-445.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-458.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-289.9KB/s(Youtube:不良林)
+      - 波兰-257.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-238.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-284.5KB/s(Youtube:不良林)
+      - 波兰-210.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-594.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-249.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-443.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-216.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-445.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-458.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-289.9KB/s(Youtube:不良林)
+      - 波兰-257.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-238.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-284.5KB/s(Youtube:不良林)
+      - 波兰-210.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-594.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-249.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-443.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-216.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-445.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-458.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-289.9KB/s(Youtube:不良林)
+      - 波兰-257.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-238.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-284.5KB/s(Youtube:不良林)
+      - 波兰-210.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-594.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-249.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-443.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-216.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-445.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-458.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-289.9KB/s(Youtube:不良林)
+      - 波兰-257.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-238.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-284.5KB/s(Youtube:不良林)
+      - 波兰-210.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-594.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-249.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-443.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-216.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-445.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-458.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-289.9KB/s(Youtube:不良林)
+      - 波兰-257.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-238.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-284.5KB/s(Youtube:不良林)
+      - 波兰-210.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-3.11MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-275.6KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-594.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-249.0KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-443.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-216.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-445.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-458.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-339.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-289.9KB/s(Youtube:不良林)
+      - 波兰-257.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-238.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-226.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-359.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-284.5KB/s(Youtube:不良林)
+      - 波兰-210.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-234.3KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-547.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
